@@ -21,6 +21,23 @@
 
 package cascading.util;
 
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.PrintStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.io.Writer;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+
 import cascading.flow.FlowElement;
 import cascading.flow.FlowException;
 import cascading.flow.Scope;
@@ -28,19 +45,16 @@ import cascading.operation.BaseOperation;
 import cascading.operation.Operation;
 import cascading.pipe.Pipe;
 import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.log4j.Logger;
-import org.jgrapht.ext.*;
+import org.jgrapht.ext.DOTExporter;
+import org.jgrapht.ext.EdgeNameProvider;
+import org.jgrapht.ext.IntegerNameProvider;
+import org.jgrapht.ext.MatrixExporter;
+import org.jgrapht.ext.VertexNameProvider;
 import org.jgrapht.graph.SimpleDirectedGraph;
-
-import java.io.*;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
 
 /** Class Util provides reusable operations. */
 public class Util
@@ -86,6 +100,19 @@ public class Util
       {
       throw new FlowException( "unable to deserialize data", exception );
       }
+    }
+
+  /**
+   * This method creates a globally unique HEX value seeded by the given string.
+   *
+   * @param seed
+   * @return
+   */
+  public static String createUniqueID( String seed )
+    {
+    String base = String.format( "%s%d%.10f", seed, System.currentTimeMillis(), Math.random() );
+
+    return DigestUtils.md5Hex( base );
     }
 
   /**
